wp-content/themes/ecosystem-energy/assets/styles/partials/_contact-offices.scss
.contact-offices {
  position: relative;
  @include flex(flex-start);
  gap: 30px;
  margin-bottom: 100px;

  .lists-ctn {
    width: 50%;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 30px;
  }

  ul {
    flex: 0 0 50%;
    margin: 0;
    padding: 0;
    list-style: none;
    
    li {
      padding: 0;
      border-top: 1px solid rgba($darkgrey, 0.2);

      .office-link {
        position: relative;
        display: block;
        padding: 20px;
        cursor: pointer;
        @include fontSize(18, 24, 600, -0.25);

        &.selected, &:hover {
          background-color: $yellow;
          color: $darkergrey;
        }

        &::after {
          position: absolute;
          right: 20px;
          font-family: 'icomoon';
          content: "\e90b";
        }
      }

      .info { display: none; }
    }
  }

  #office-info {
    position: relative;
    width: 50%;
    @include flex(flex-start, flex-start);
    flex-wrap: wrap;
    padding: 40px;
    border: 1px solid rgba(#979797, 0.4);
    background-color: white;
    z-index: 1;

    h3 {
      margin: 0 0 60px;
      flex-basis: 100%;
      @include fontSize(32, 44, 400, -0.45);
    }

    .default-content {
      margin: 80px auto;
      text-align: center;
    }

    .phones { 
      flex-basis: 50%;
      padding-right: 20px;
    }

    .phone {
      @include fontSize(22, 26, 600);
      white-space: nowrap;

      &::before {
        margin-right: 20px;
        @extend .icomoon;
        content: "\e912";
        font-size: 18px;
      }
    }

    .fax {
      @include fontSize(18, 26, 400);
      &::before {
        // Printer icon
      }
    }

    .address {
      flex-basis: 40%;
      height: 145px;

      p { 
        margin: 0;
        @include fontSize(16, 24, 400);
      }

      .itinerary {
        @include fontSize(14, 26, 700);
      }
    }
  }

  @media (max-width: $tablet-large) {
    #office-info {
      padding: 40px 30px;
      .address { flex-basis: 100%; }
    }
  }

  @media (max-width: $tablet) {
    gap: 0;
    padding-bottom: 60px;

    .lists-ctn { 
      grid-template-columns: 1fr;
      gap: 0;
    }

    ul { width: 100%; }

    #office-info {
      h3 { margin-bottom: 30px; }

      .phones {
        flex-basis: 100%;
        padding: 0;
      }
    }
  }

  @media (max-width: 575px) {
    display: block;

    .lists-ctn, #office-info { width: 100%; }

    #office-info { 
      margin-top: 40px;
      .phones { flex-basis: 100%; }
    }
  }
}

